ALF-487: заголовок карточки контента
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1557 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/java/ru/it/lecm/documents/form.properties
+++ b/lecm-documents/share/src/main/java/ru/it/lecm/documents/form.properties
@@ -5,6 +5,7 @@ page.lecm.document.attachment.title=Document content
 page.lecm.document.attachment.description=Document content card
 
 title.documents=Documents
+title.attachments=Attachments
 
 info.connections=Connections
 button.connection.add=Add connection
