ALF-473  Участники документа (правая область) ALF-479 Просмотр участников документа (главная область) ALF-516 Добавление участника документа (API)
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1561 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/repo/src/main/config/messages/lecm-documents.properties
+++ b/lecm-documents/repo/src/main/config/messages/lecm-documents.properties
@@ -12,3 +12,10 @@ lecm-connect-types_dictionary-connection-types.property.lecm-connect-types_prima
 lecm-connect-types_dictionary-connection-types.property.lecm-connect-types_connected-document-type.title=Connected document type
 lecm-connect-types_dictionary-connection-types.association.lecm-connect-types_available-connection-types-assoc.title=Available connection types
 lecm-connect-types_dictionary-connection-types.association.lecm-connect-types_default-connection-type-assoc.title=Default connection types
+
+lecm-doc-members_model.type.lecm-doc-members_member.title=Document Member
+lecm-doc-members_model.type.lecm-doc-members_member.description=Document Member
+lecm-doc-members_model.property.lecm-doc-members_group.title=Group
+lecm-doc-members_model.property.lecm-doc-members_group.description=Group
+lecm-doc-members_model.association.lecm-doc-members_employee-assoc.title=Employee
+lecm-doc-members_model.association.lecm-doc-members_employee-assoc.description=Employee
