--- a/lecm-documents/share/src/main/java/ru/it/lecm/documents/form.properties
+++ b/lecm-documents/share/src/main/java/ru/it/lecm/documents/form.properties
@@ -16,3 +16,14 @@ label.connected.with.documents=Connected with documents
 
 connection.types.show.all=Show all
 label.connection.add.title=Add connection
+
+button.member.add=Add member
+label.document.members=Members
+message.member.add.success=Member added successful
+message.member.add.failure=Member added failure
+
+label.member.add.title=Add member
+
+lecm-doc-members_member-fio=FIO
+lecm-doc-members_member-unit=Unit
+lecm-doc-members_member-position=Position
