Договора. Договор отображается в списке договоров при переводе в другой статус. Добавлена ссылка в меню на договора. Папка Contracts создается в черновиках.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1567 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/repo/pom.xml
+++ b/lecm-contracts/repo/pom.xml
@@ -73,6 +73,19 @@
 			<version>${project.version}</version>
 			<scope>provided</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework.extensions.surf</groupId>
+            <artifactId>spring-webscripts</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ru.it.lecm.base</groupId>
+            <artifactId>base-repo-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.quartz-scheduler</groupId>
+            <artifactId>quartz</artifactId>
+        </dependency>
     </dependencies>
     <!--
        The scm is required for the buildnumber-maven-plugin which is required
