ALF-458 3.4 Мои задачи (дашлет)
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1574 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/tasks/dashlet/my-tasks.get.properties
+++ b/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/tasks/dashlet/my-tasks.get.properties
@@ -1,3 +1,5 @@
 label.title=Attachments
 dashlet.help=<p>Dashlet "Attachments" is designed to...</p>
 dashlet.help.tooltip=Show help
+dashlet.expand.tooltip=Expand
+dashlet.tasks.count=Total count
