--- a/lecm-statemachine/api/pom.xml
+++ b/lecm-statemachine/api/pom.xml
@@ -19,6 +19,14 @@
 		and include them in the AMP, they are provided by Alfresco
 	  -->
 	<dependencies>
+        <dependency>
+            <groupId>org.alfresco</groupId>
+            <artifactId>alfresco-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.alfresco</groupId>
+            <artifactId>alfresco-repository</artifactId>
+        </dependency>
 		<dependency>
 			<groupId>org.alfresco</groupId>
 			<artifactId>alfresco-data-model</artifactId>
