--- a/lecm-statemachine/repo/src/main/config/messages/lecm-statemachine.properties
+++ b/lecm-statemachine/repo/src/main/config/messages/lecm-statemachine.properties
@@ -13,3 +13,8 @@ statemachine.action.StartWorkflow=Start Workflow
 statemachine.action.WaitForDocumentChange=Wait for Document Change
 statemachine.action.UserWorkflow=Start Process
 statemachine.action.TransitionAction=Expression Transition
+
+WORKFLOWTASKSTATE_NA=NA
+WORKFLOWTASKSTATE_NEW=NEW
+WORKFLOWTASKSTATE_OVERDUE=OVERDUE
+WORKFLOWTASKSTATE_SOON=SOON
