[+] Реализация прав редактирования полей для документа
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1576 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/pom.xml
+++ b/lecm-documents/share/pom.xml
@@ -32,6 +32,14 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.alfresco</groupId>
+            <artifactId>alfresco-web-framework-commons</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.extensions.surf</groupId>
+            <artifactId>spring-webscripts</artifactId>
+        </dependency>
 		<!-- Don't add here amp dependencies as it will break amp packaging -->
 	</dependencies>
 
