ALF-457: Вложения (дашлет)
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1580 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/java/ru/it/lecm/documents/form.properties
+++ b/lecm-documents/share/src/main/java/ru/it/lecm/documents/form.properties
@@ -27,3 +27,7 @@ label.member.add.title=Add member
 lecm-doc-members_member-fio=FIO
 lecm-doc-members_member-unit=Unit
 lecm-doc-members_member-position=Position
+
+label.attachmets.file.name=File name
+label.attachmets.autor=Autor
+label.attachmets.version=Version
