--- a/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/attachments/dashlet/attachments.get.properties
+++ b/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/attachments/dashlet/attachments.get.properties
@@ -1,3 +1,2 @@
 label.title=Attachments
-dashlet.help=<p>Dashlet "Attachments" is designed to...</p>
-dashlet.help.tooltip=Show help
+dashlet.expand.tooltip=Expand
