ALF-480 Пригласить нового участника (главная область)
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1588 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/java/ru/it/lecm/base-share/base-share.properties
+++ b/lecm-base/share/src/main/java/ru/it/lecm/base-share/base-share.properties
@@ -12,3 +12,5 @@ logicecm.base.create-new-button.label=+
 logicecm.base.show-arhive.label=Show arhive
 
 label.limit_reached=Limit reached: records were found more than returned. Please edit your search query to get the other records.
+
+message.delete.success=Item was deleted
