ALF-457: Вложения (дашлет) - загрузка новой версии
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1590 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/attachments/dashlet/attachments.get.properties
+++ b/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/attachments/dashlet/attachments.get.properties
@@ -1,3 +1,5 @@
 label.title=Attachments
 dashlet.expand.tooltip=Expand
 actions.view-content=View content
+actions.upload-new-version=Upload new version
+label.filter-description=Same type as {0}
