ALF-488: Добавление новой версии контента через drag and drop
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1612 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/base-share/components/dnd-upload/dnd-upload.get.properties
+++ b/lecm-base/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/base-share/components/dnd-upload/dnd-upload.get.properties
@@ -1,5 +1,5 @@
-header.singleUpload=Upload File to {0}
-header.multiUpload=Upload Files to {0}
+header.singleUpload=Upload new version of file "{0}"
+header.multiUpload=Upload Files to "{0}"
 header.singleUpdate=Update File
 
 label.noFiles=Loading files into memory, please wait...
