ALF-501: Ratings + переводы для полей в "Основных сведениях"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1635 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-statemachine/repo/src/main/config/messages/lecm-statemachine.properties
+++ b/lecm-statemachine/repo/src/main/config/messages/lecm-statemachine.properties
@@ -18,3 +18,6 @@ WORKFLOWTASKSTATE_NA=NA
 WORKFLOWTASKSTATE_NEW=NEW
 WORKFLOWTASKSTATE_OVERDUE=OVERDUE
 WORKFLOWTASKSTATE_SOON=SOON
+
+lecm-statemachine_model.property.lecm-statemachine_status.title=Status
+lecm-statemachine_model.property.lecm-statemachine_status.description=Status
