--- a/lecm-base/share/src/main/java/ru/it/lecm/base-share/base-share.properties
+++ b/lecm-base/share/src/main/java/ru/it/lecm/base-share/base-share.properties
@@ -14,3 +14,5 @@ logicecm.base.show-arhive.label=Show arhive
 label.limit_reached=Limit reached: records were found more than returned. Please edit your search query to get the other records.
 
 message.delete.success=Item was deleted
+
+logicecm.base.message.enter-search-text=Enter search text
