ALF-526. Выбор дополнительных привелегий из справочника + изменения с этим связанные
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1639 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/repo/src/main/config/messages/lecm-documents.properties
+++ b/lecm-documents/repo/src/main/config/messages/lecm-documents.properties
@@ -19,3 +19,11 @@ lecm-doc-members_model.property.lecm-doc-members_group.title=Group
 lecm-doc-members_model.property.lecm-doc-members_group.description=Group
 lecm-doc-members_model.association.lecm-doc-members_employee-assoc.title=Employee
 lecm-doc-members_model.association.lecm-doc-members_employee-assoc.description=Employee
+
+statemachine.state.privileges.INITIATOR=Initiator
+statemachine.state.privileges.CORRECTOR=Corrector
+statemachine.state.privileges.READER=Reader
+statemachine.state.privileges.OWNER=Owner
+statemachine.state.privileges.RESPONSIBLE=Responsible
+statemachine.state.privileges.STAFF=Staff
+statemachine.state.privileges.REVIEWER=Reviewer
