--- a/lecm-documents/repo/pom.xml
+++ b/lecm-documents/repo/pom.xml
@@ -79,6 +79,11 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>ru.it.lecm.statemachine</groupId>
+            <artifactId>statemachine-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>ru.it.lecm.security</groupId>
             <artifactId>lecm-security-api</artifactId>
             <version>${project.version}</version>
