--- a/lecm-statemachine/api/pom.xml
+++ b/lecm-statemachine/api/pom.xml
@@ -35,5 +35,9 @@
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework.extensions.surf</groupId>
+            <artifactId>spring-surf</artifactId>
+        </dependency>
 	</dependencies>
 </project>
