--- a/lecm-contracts/repo/pom.xml
+++ b/lecm-contracts/repo/pom.xml
@@ -83,6 +83,11 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>ru.it.lecm.documents</groupId>
+            <artifactId>documents-repo-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.quartz-scheduler</groupId>
             <artifactId>quartz</artifactId>
         </dependency>
