ALF-440: Просмотр перечня связей - связанные с документом
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1652 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/connections/list/connections.list.get.properties
+++ b/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/connections/list/connections.list.get.properties
@@ -1,3 +1,4 @@
 button.connection.create=Create connection
 actions.more=More
 title.connected-documents=Connected documents
+title.connected-with-documents=Connected with documents
