--- a/lecm-statemachine/repo/pom.xml
+++ b/lecm-statemachine/repo/pom.xml
@@ -85,6 +85,11 @@
             <groupId>org.springframework.extensions.surf</groupId>
             <artifactId>spring-surf</artifactId>
         </dependency>
+        <dependency>
+            <groupId>ru.it.lecm.documents</groupId>
+            <artifactId>documents-repo-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 		<!-- Don't add here amp dependencies as it will break amp packaging -->
     </dependencies>
     <!--
