--- a/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/connections/list/connections.list.get.properties
+++ b/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/connections/list/connections.list.get.properties
@@ -2,3 +2,9 @@ button.connection.create=Create connection
 actions.more=More
 title.connected-documents=Connected documents
 title.connected-with-documents=Connected with documents
+
+action.delete-connection.title=Delete connection
+message.confirm.delete.title=Delete connection
+message.confirm.delete.description=Are you sure you want to delete this item?
+message.delete.success=Success delete
+message.delete.failure=Failure delete
