ALF-484 5.6 Задачи (главная область)
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1676 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-statemachine/repo/src/main/config/messages/lecm-statemachine.properties
+++ b/lecm-statemachine/repo/src/main/config/messages/lecm-statemachine.properties
@@ -14,10 +14,19 @@ statemachine.action.WaitForDocumentChange=Wait for Document Change
 statemachine.action.UserWorkflow=Start Process
 statemachine.action.TransitionAction=Expression Transition
 
-WORKFLOWTASKSTATE_NA=NA
-WORKFLOWTASKSTATE_NEW=NEW
-WORKFLOWTASKSTATE_OVERDUE=OVERDUE
-WORKFLOWTASKSTATE_SOON=SOON
-
 lecm-statemachine_model.property.lecm-statemachine_status.title=Status
 lecm-statemachine_model.property.lecm-statemachine_status.description=Status
+
+WORKFLOWTASKTYPE_NA=NA
+WORKFLOWTASKTYPE_OVERDUE=OVERDUE
+WORKFLOWTASKTYPE_SOON=SOON
+
+WORKFLOWTASKPRIORITY_HIGH=High Priority
+WORKFLOWTASKPRIORITY_MEDIUM=Medium Priority
+WORKFLOWTASKPRIORITY_LOW=Low Priority
+
+workflowStatus.Not\ Yet\ Started=Not Yet Started
+workflowStatus.In\ Progress=In Progress
+workflowStatus.On\ Hold= On Hold
+workflowStatus.Cancelled=Cancelled
+workflowStatus.Completed=Completed
