[~] минорные изменения в стилях страницы "Документы"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1739 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/java/ru/it/lecm/base-share/base-share.properties
+++ b/lecm-base/share/src/main/java/ru/it/lecm/base-share/base-share.properties
@@ -16,3 +16,5 @@ label.limit_reached=Limit reached: records were found more than returned. Please
 message.delete.success=Item was deleted
 
 logicecm.base.message.enter-search-text=Enter search text
+
+button.cancel=Cancel
