Перенес проперти "регистрационный номер" (regnum) из Договоров в Документы (lecm-contract:regnum -> lecm-document:regnum) так как предполагается, что регистрационный номер должен быть у всех документов.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1742 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/repo/src/main/config/messages/lecm-documents.properties
+++ b/lecm-documents/repo/src/main/config/messages/lecm-documents.properties
@@ -1,3 +1,6 @@
+lecm-document_model.property.lecm-document_regnum.title=Registration number
+lecm-document_model.property.lecm-document_regnum.description=Registration number
+
 lecm-connect_dictionary-connection.type.lecm-connect_connection.title=Connections
 lecm-connect_dictionary-connection.association.lecm-connect_primary-document-assoc.title=Primary document
 lecm-connect_dictionary-connection.association.lecm-connect_connected-document-assoc.title=Connected document
