ALF-605 Оргструктра > Подразделения: формы создания и редактирования подразделения
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1771 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-orgstructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/org.structure.get.properties
+++ b/lecm-orgstructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/org.structure.get.properties
@@ -7,8 +7,8 @@ message.delete.unit.error=Some error occured
 
 label.column.select=Select
 label.column.actions=Actions
-label.create-row.title=Create
-label.edit-row.title=Edit Data Item
+label.create-row.title=New Unit
+label.edit-row.title=Unit
 label.edit-row.edit-dataitem=Data Item Edit page...
 
 message.select-list=No Data List selected.
