--- a/lecm-documents/share/src/main/java/ru/it/lecm/documents/form.properties
+++ b/lecm-documents/share/src/main/java/ru/it/lecm/documents/form.properties
@@ -31,3 +31,5 @@ lecm-doc-members_member-position=Position
 label.attachmets.file.name=File name
 label.attachmets.autor=Autor
 label.attachmets.version=Version
+
+document.main.form.edit=Changing attributes of a document
