[~] переименован метод ALF-604 Оргструктра > Штатное расписание: форма редактирования дожностной позиции ALF-603 Оргструктра > Штатное расписание: Неверные названия форм создания должностной позиции, назначения сотрудника
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1784 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-orgstructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/org.staff-list.grid.get.properties
+++ b/lecm-orgstructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/org.staff-list.grid.get.properties
@@ -10,9 +10,10 @@ message.employee.position.delete.failure.primary=Can't delete primary position w
 
 label.column.select=Select
 label.column.actions=Actions
-label.create-row.title=Create
-label.edit-row.title=Edit Data Item
+label.create-row.title=New Staff
+label.edit-row.title=Staff
 label.edit-row.edit-dataitem=Data Item Edit page...
+label.employee-link.add=Add New Employee
 
 message.select-list=No Data List selected.
 message.error.columns.title=Data List Columns
