[~]рефакторинг Оргструктуры: скрипты распределены по директориям ALF-609 Оргструктра > Роли для рабочих групп: назваине форм создания и редактирования роли ALF-608 Оргструктра > Должностные позиции: название самого раздела; название форм создания и редактирования должностной позиции
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1786 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-orgstructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/workroles/org.roles.grid.get.properties
+++ b/lecm-orgstructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/workroles/org.roles.grid.get.properties
@@ -1,7 +1,7 @@
 label.column.select=Select
 label.column.actions=Actions
-label.create-row.title=Create
-label.edit-row.title=Edit Data Item
+label.create-row.title=Create Role
+label.edit-row.title=Role
 label.edit-row.edit-dataitem=Data Item Edit page...
 
 message.select-list=No Data List selected.
@@ -19,6 +19,7 @@ message.duplicate.failure=Could not duplicate item
 message.version = Version:
 message.save.success=Data Item saved successfully
 message.save.failure=Could not save Data Item
+
 ## Drop-down Menus
 menu.select=Select
 menu.select.all=All
