--- a/lecm-orgstructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/positions/org.positions.grid.get.properties
+++ b/lecm-orgstructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/positions/org.positions.grid.get.properties
@@ -1,7 +1,7 @@
 label.column.select=Select
 label.column.actions=Actions
-label.create-row.title=Create
-label.edit-row.title=Edit Data Item
+label.create-row.title=New Position
+label.edit-row.title=Position
 label.edit-row.edit-dataitem=Data Item Edit page...
 
 message.select-list=No Data List selected.
