--- a/lecm-statemachine/api/pom.xml
+++ b/lecm-statemachine/api/pom.xml
@@ -39,5 +39,10 @@
             <groupId>org.springframework.extensions.surf</groupId>
             <artifactId>spring-surf</artifactId>
         </dependency>
-	</dependencies>
+        <dependency>
+            <groupId>ru.it.lecm.business-journal</groupId>
+            <artifactId>business-journal-repo-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
 </project>
