ALF-611: Справочники: форма создания элемента справочника
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1816 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/toolbar/toolbar.get.properties
+++ b/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/toolbar/toolbar.get.properties
@@ -6,7 +6,7 @@ button.export-xml=Export XML
 button.import-xml=Import XML
 button.export-csv=Export CSV
 
-label.new-row.title=Create New Item
+label.new-row.title=New Dictionary Element
 
 message.new-row.success=Successfully added new item
 message.new-row.failure=Could not add new item to the Data List
