1) Добавлена зависимость "Регистрационных номеров" от модели данных Контрактов 2) Сервис "Регистрационные номера" добавлен в сборку.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1821 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,7 @@
 		<module>lecm-user-profile</module>
 		<module>lecm-integrotest</module>
 		<module>lecm-documents</module>
+		<module>lecm-regnumbers</module>
 	</modules>
     <scm>
         <connection>scm:svn:https://svn.datateh.ru/alfrescoecm/Business Platform/trunk/</connection>
