[+] Локализация групп привелегий
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1837 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-security/repo/src/main/config/messages/security.properties
+++ b/lecm-security/repo/src/main/config/messages/security.properties
@@ -12,3 +12,12 @@
 #lecm-d8n_delegation-model.type.lecm-d8n_delegation-opts-container.title=Collection of delegation options
 #lecm-d8n_delegation-model.association.lecm-d8n_delegation-opts-assoc.title=Delegation options
 #lecm-d8n_delegation-model.association.lecm-d8n_delegation-opts-assoc.description=Link to delegation options
+
+lecm.roles.LECM_BASIC_PG_Owner=Owner
+lecm.roles.LECM_BASIC_PG_ResponsibleEmployee=Responsible Employee
+lecm.roles.LECM_BASIC_PG_Initiator=Initiator
+lecm.roles.LECM_BASIC_PG_Reader=Reader
+lecm.roles.LECM_BASIC_PG_Administrator=Administrator
+lecm.roles.LECM_BASIC_PG_Reviewer=Reviewer
+lecm.roles.LECM_BASIC_PG_InputCorrector=Input Corrector
+lecm.roles.LECM_BASIC_PG_Employee=Employee
