--- a/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/comments/comments-list.get.properties
+++ b/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/comments/comments-list.get.properties
@@ -17,4 +17,5 @@ message.savecomment.failure=Unable to save comment
 message.confirm.delete.title=Delete Comment
 message.confirm.delete=Are you sure you want to delete this comment?
 message.wait=Please wait...
+message.permission=Failed to resolve
 
