ALF-601 Изменение карточки сотрудника
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1891 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/java/ru/it/lecm/base-share/base-share.properties
+++ b/lecm-base/share/src/main/java/ru/it/lecm/base-share/base-share.properties
@@ -4,6 +4,7 @@ actions.add=Add
 actions.edit=Edit
 actions.delete-row=Delete
 logicecm.view=View
+logicecm.employee.view=Employee View
 
 logicecm.base.elements-for-select=Elements for selection
 logicecm.base.selected-elements=Selected elements
