ALF-675 Изменить размещение элементов в "шапке"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1934 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/share/src/main/java/ru/it/lecm/contracts/contracts.properties
+++ b/lecm-contracts/share/src/main/java/ru/it/lecm/contracts/contracts.properties
@@ -1,3 +1,4 @@
 page.contracts.title=Contracts
 page.contracts.filter.label=(content filtered)
 header.contracts.label=Contracts
+header.contracts.description=Contracts
