--- a/lecm-statemachine-editor/share/src/main/java/ru/it/lecm/statemachine/editor/editor.properties
+++ b/lecm-statemachine-editor/share/src/main/java/ru/it/lecm/statemachine/editor/editor.properties
@@ -1,3 +1,6 @@
+header.statemachine.label=State machine
+header.statemachine.description=State machine editor
+
 statemachine.editor.expression=Actions for start State
 statemachine.editor.transition=Transition
 statemachine.editor.appendstatus=Append Status
