[~] Машина состояний. Изменение формы передачи переменных между машиной состояний и дочерним процессом
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1937 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-statemachine-editor/share/src/main/java/ru/it/lecm/statemachine/editor/editor.properties
+++ b/lecm-statemachine-editor/share/src/main/java/ru/it/lecm/statemachine/editor/editor.properties
@@ -34,3 +34,7 @@ button.export-xml=Export XML
 button.import-xml=Import XML
 
 import.error=Error during State Machine Export!
+statemachine.editor.form.label.process_receive=Process receive
+statemachine.editor.form.label.statemachine_sender=Statemachine Sender
+statemachine.editor.form.label.statemachine_receive=Statemachine Receiver
+statemachine.editor.form.label.process_sender=Process Sender
