--- a/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model.properties
+++ b/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model.properties
@@ -6,14 +6,14 @@ lecm-stmeditor_model.property.lecm-stmeditor_transitionLabel.title=Transition Na
 lecm-stmeditor_model.property.lecm-stmeditor_conditionAccess.title=Expression Accessabily
 
 lecm-stmeditor_model.property.lecm-stmeditor_inputToValue.title=\u0418\u043C\u044F \u043F\u0435\u0440\u0435\u043C\u0435\u043D\u043D\u043E\u0439
-lecm-stmeditor_model.property.lecm-stmeditor_inputFromType.title=\u0422\u0438\u043F \u043F\u0435\u0440\u0435\u0434\u0430\u0447\u0438
-lecm-stmeditor_model.property.lecm-stmeditor_inputToType.title=\u041F\u0435\u0440\u0435\u0434\u0430\u0447\u0430 \u0432 \u043F\u0440\u043E\u0446\u0435\u0441\u0441
+lecm-stmeditor_model.property.lecm-stmeditor_inputFromType.title=\u0422\u0438\u043F
+lecm-stmeditor_model.property.lecm-stmeditor_inputToType.title=\u0422\u0438\u043F
 lecm-stmeditor_model.property.lecm-stmeditor_inputFromValue.title=\u0417\u043D\u0430\u0447\u0435\u043D\u0438\u0435
 
 lecm-stmeditor_model.property.lecm-stmeditor_outputToValue.title=\u0418\u043C\u044F \u043F\u0435\u0440\u0435\u043C\u0435\u043D\u043D\u043E\u0439
-lecm-stmeditor_model.property.lecm-stmeditor_outputFromType.title=\u0422\u0438\u043F \u043F\u0435\u0440\u0435\u0434\u0430\u0447\u0438
+lecm-stmeditor_model.property.lecm-stmeditor_outputFromType.title=\u0422\u0438\u043F
 lecm-stmeditor_model.property.lecm-stmeditor_outputFromValue.title=\u0417\u043D\u0430\u0447\u0435\u043D\u0438\u0435
-lecm-stmeditor_model.property.lecm-stmeditor_outputToType.title=\u041F\u0435\u0440\u0435\u0434\u0430\u0447\u0430 \u0432 \u043C\u0430\u0448\u0438\u043D\u0443 \u0441\u043E\u0441\u0442\u043E\u044F\u043D\u0438\u0439
+lecm-stmeditor_model.property.lecm-stmeditor_outputToType.title=\u0422\u0438\u043F
 
 lecm-stmeditor_model.property.lecm-stmeditor_condition.title=Condition
 lecm-stmeditor_model.property.lecm-stmeditor_conditionErrorMessage.title=Error Message
@@ -54,3 +54,4 @@ listconstraint.lecm-stmeditor_toTypeList.FIELD=Document Field
 listconstraint.lecm-stmeditor_permissionType.noaccess=No Access
 listconstraint.lecm-stmeditor_permissionType.readonly=Read
 listconstraint.lecm-stmeditor_permissionType.full=Write
+listconstraint.lecm-stmeditor_toTypeList.VALUE=\u0417\u043D\u0430\u0447\u0435\u043D\u0438\u0435
