[ALF-613] в контролах выбора доверенного лица нельзя выбрать делегирующее лицо, т.е. нельзя выбрать самого себя или того, для кого настраиваем делегирования. на контрол выбора доверенного лица повешен валидатор, который не дает сохранить форму если доверенное лицо не указано
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1953 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-delegation/share/src/main/java/ru/it/lecm/delegation/form/form.properties
+++ b/lecm-delegation/share/src/main/java/ru/it/lecm/delegation/form/form.properties
@@ -13,5 +13,6 @@ page.delegation.title=Delegation
 page.delegation.filteredLabel=(content filtered)
 
 message.can-transfer-rights.error=You can transfer rights to only one
+message.has-trustee.error=You must specify a trustee
 
 form.button.submit.label=Save
