ALF-590 дополнительные методы для оргструктуры
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1977 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-orgstructure/repo/pom.xml
+++ b/lecm-orgstructure/repo/pom.xml
@@ -106,6 +106,12 @@
             <artifactId>documents-repo-api</artifactId>
             <version>${project.version}</version>
         </dependency>
+		<dependency>
+			<groupId>ru.it.lecm.delegation</groupId>
+			<artifactId>lecm-delegation-repo-api</artifactId>
+            <version>${project.version}</version>
+			<scope>provided</scope>
+		</dependency>
 		<!-- Don't add here amp dependencies as it will break amp packaging -->
     </dependencies>
     <!--
