[+] ALF-498  Базовый журнал
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1979 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/java/ru/it/lecm/documents/form.properties
+++ b/lecm-documents/share/src/main/java/ru/it/lecm/documents/form.properties
@@ -33,3 +33,6 @@ label.attachmets.autor=Autor
 label.attachmets.version=Version
 
 document.main.form.edit=Changing attributes of a document
+
+page.lecm.documents-journal.title=Documents Journal
+page.lecm.documents-journal.description=Documents Journal
