ALF-689: Изменения в содержании подписки на сотрудника (права)
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2003 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-notifications/repo/pom.xml
+++ b/lecm-notifications/repo/pom.xml
@@ -58,6 +58,12 @@
 		    <artifactId>notifications-repo-api</artifactId>
 		    <version>${project.version}</version>
 	    </dependency>
+	    <dependency>
+		    <groupId>ru.it.lecm.security</groupId>
+		    <artifactId>lecm-security-api</artifactId>
+		    <version>${project.version}</version>
+		    <scope>provided</scope>
+	    </dependency>
         <!-- Don't add here amp dependencies as it will break amp packaging -->
     </dependencies>
     <!--
