ALF-576: Разработать справочники для сервиса "Контрагенты". ALF-577: Для справочников "Контрагенты" и "Представители" реализовать отдельную форму.
В lecm-datagrid.js добавлена новая опция: forceSubscribing {Boolean|false}.
Должна быть true, если за один жизненный цикл страницы на неё могут быть добавлены/удалены несколько datagrid'ов.

В datagrid и в datagrid-all добавлен Bubbling Label, исправляет поведение datagrid'ов, которые ловили не свои события.

Toolbar datagrid'а теперь ищет не первый попавшийся, а "свой".
Было: Alfresco.util.ComponentManager.findFirst("LogicECM.module.Base.DataGrid");
Стало: LogicECM.module.Base.Util.findComponentByBubblingLabel("LogicECM.module.Base.DataGrid", "dictionaries-datagrid");

Из datagrid.head.ftl убрано подключение скриптов, которые уже подтягивались через share-config-custom из модуля base.

git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2004 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
        order to be able to use Maven snapshots we cannot use the <version/>
        below as the AMP module version. Instead we use the
        buildnumber-maven-plugin. This requires a scm connection.
-   -->
+    -->
     <version>0.1.0</version>
     <description>Logic ECM Platform</description>
     <repositories>
@@ -100,7 +100,8 @@
 		<module>lecm-integrotest</module>
 		<module>lecm-documents</module>
 		<module>lecm-regnumbers</module>
-	</modules>
+        <module>lecm-contractors</module>
+    </modules>
     <scm>
         <connection>scm:svn:https://svn.datateh.ru/alfrescoecm/Business Platform/trunk/</connection>
         <!--<developerConnection>scm:svn:https://${user.name}@domain.com/svn/trunk/</developerConnection>-->
