REV2004: Добавлены зависимости в alfresco/pom.xml и share/pom.xml для контрагентов.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2007 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/server/share/pom.xml
+++ b/server/share/pom.xml
@@ -141,7 +141,7 @@
 			<version>${platform.version}</version>
 			<type>amp</type>
 			<scope>runtime</scope>
-		</dependency>        
+		</dependency>
 		<dependency>
 			<groupId>ru.it.lecm.subscriptions</groupId>
 			<artifactId>subscriptions-share</artifactId>
@@ -201,6 +201,13 @@
 		 <dependency>
             <groupId>ru.it.lecm.regnumbers</groupId>
             <artifactId>lecm-regnumbers-share</artifactId>
+            <version>${platform.version}</version>
+            <type>amp</type>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>ru.it.lecm.contractors</groupId>
+            <artifactId>lecm-contractors-share</artifactId>
             <version>${platform.version}</version>
             <type>amp</type>
             <scope>runtime</scope>
