[+] Добавлена возможность инициализировать собственные объекты для Workflow Task Java Script
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2012 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/server/share/pom.xml
+++ b/server/share/pom.xml
@@ -198,9 +198,16 @@
             <type>amp</type>
             <scope>runtime</scope>
         </dependency>
-		 <dependency>
+        <dependency>
             <groupId>ru.it.lecm.regnumbers</groupId>
             <artifactId>lecm-regnumbers-share</artifactId>
+            <version>${platform.version}</version>
+            <type>amp</type>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>ru.it.lecm.user-workflow</groupId>
+            <artifactId>user-workflow-share</artifactId>
             <version>${platform.version}</version>
             <type>amp</type>
             <scope>runtime</scope>
