--- a/pom.xml
+++ b/pom.xml
@@ -100,8 +100,8 @@
 		<module>lecm-integrotest</module>
 		<module>lecm-documents</module>
 		<module>lecm-regnumbers</module>
-        <module>lecm-contractors</module>
-    </modules>
+		<module>lecm-user-workflow</module>
+	</modules>
     <scm>
         <connection>scm:svn:https://svn.datateh.ru/alfrescoecm/Business Platform/trunk/</connection>
         <!--<developerConnection>scm:svn:https://${user.name}@domain.com/svn/trunk/</developerConnection>-->
