--- a/server/alfresco/pom.xml
+++ b/server/alfresco/pom.xml
@@ -269,6 +269,13 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
+            <groupId>ru.it.lecm.user-workflow</groupId>
+            <artifactId>user-workflow-repo</artifactId>
+            <version>${platform.version}</version>
+            <type>amp</type>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
             <groupId>ru.it.lecm.contractors</groupId>
             <artifactId>lecm-contractors-repo</artifactId>
             <version>${platform.version}</version>
