--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,7 @@
 		<module>lecm-integrotest</module>
 		<module>lecm-documents</module>
 		<module>lecm-regnumbers</module>
+		<module>lecm-contractors</module>
 		<module>lecm-user-workflow</module>
 	</modules>
     <scm>
