На страницу "Рабочий календарь > Отсутствие" добавлена галочка, позволяющая видеть только активные отсутствия. В датагрид на той же странице добавлена колонка "Активное", показывающая, активно ли отсутствие в данный момент.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2026 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-calendar/repo/src/main/config/messages/calendar.properties
+++ b/lecm-calendar/repo/src/main/config/messages/calendar.properties
@@ -23,6 +23,8 @@ lecm-absence_absence-model.property.lecm-absence_begin.title=Absence beginning
 lecm-absence_absence-model.property.lecm-absence_end.title=Absence ending
 #<property name="lecm-absence:unlimited">
 lecm-absence_absence-model.property.lecm-absence_unlimited.title=Unlimited absence
+#<property name="lecm-absence:activated">
+lecm-absence_absence-model.property.lecm-absence_activated.title=Active
 #<property name="lecm-absence:comment">
 lecm-absence_absence-model.property.lecm-absence_comment.title=Comment
 # <association name="lecm-absence:abscent-employee-assoc">
