ALF-373 Предельное время нахождения в статусе (Таймаут)
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2028 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model.properties
+++ b/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model.properties
@@ -29,6 +29,8 @@ lecm-stmeditor_model.property.lecm-stmeditor_staticRoles.title=Static Roles
 lecm-stmeditor_model.property.lecm-stmeditor_dynamicRoles.title=Dynamic Roles
 lecm-stmeditor_model.property.lecm-stmeditor_permissionTypeValue.title=Permission
 
+lecm-stmeditor_model.property.lecm-stmeditor_timerDuration.title=Duration
+
 
 #Status Properties
 lecm-stmeditor_model.property.lecm-stmeditor_takeFinishStateWithTransitionUser.title=Status Transition
