--- a/server/alfresco/pom.xml
+++ b/server/alfresco/pom.xml
@@ -282,6 +282,13 @@
             <type>amp</type>
             <scope>runtime</scope>
         </dependency>
+		<dependency>
+            <groupId>ru.it.lecm.contracts-fake</groupId>
+            <artifactId>contracts-fake-repo</artifactId>
+            <version>${platform.version}</version>
+            <type>amp</type>
+            <scope>runtime</scope>
+        </dependency>
 	</dependencies>
 
 	<build>
