--- a/server/share/pom.xml
+++ b/server/share/pom.xml
@@ -219,6 +219,13 @@
             <type>amp</type>
             <scope>runtime</scope>
         </dependency>
+		<dependency>
+			<groupId>ru.it.lecm.contracts-fake</groupId>
+			<artifactId>contracts-fake-share</artifactId>
+			<version>${platform.version}</version>
+			<type>amp</type>
+			<scope>runtime</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
