[+]Добавлены переводы [~]Подправлена модель
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2041 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/repo/src/main/config/messages/lecm-contracts-model.properties
+++ b/lecm-contracts/repo/src/main/config/messages/lecm-contracts-model.properties
@@ -1,2 +1,34 @@
 lecm-contract_model.type.lecm-contract_document.title=Contract document
 lecm-contract_model.type.lecm-contract_document.description=Contract document
+lecm-contract_model.property.lecm-contract_regNumProject.title=Registration number of the draft contract
+lecm-contract_model.property.lecm-contract_regNumProject.description=Registration number of the draft contract
+lecm-contract_model.property.lecm-contract_regNumSystem.title=Registration number of the contract system
+lecm-contract_model.property.lecm-contract_regNumSystem.description=Registration number of the contract system
+lecm-contract_model.property.lecm-contract_regNumContractor.title=Registration number of the Counterparty
+lecm-contract_model.property.lecm-contract_regNumContractor.description=Registration number of the Counterparty
+lecm-contract_model.property.lecm-contract_dateRegProjectContracts.title=Date of registration of the project agreement
+lecm-contract_model.property.lecm-contract_dateRegProjectContracts.description=Date of registration of the project agreement
+lecm-contract_model.property.lecm-contract_dateRegContracts.title=Date of registration of the contract
+lecm-contract_model.property.lecm-contract_dateRegContracts.description=Date of registration of the contract
+lecm-contract_model.property.lecm-contract_dateConclusionContracts.title=Date of contract
+lecm-contract_model.property.lecm-contract_dateConclusionContracts.description=Date of contract
+lecm-contract_model.property.lecm-contract_summaryContent.title=Summary of the treaty
+lecm-contract_model.property.lecm-contract_summaryContent.description=Summary of the treaty
+lecm-contract_model.property.lecm-contract_partner.title=Contractor
+lecm-contract_model.property.lecm-contract_partner.description=Contractor
+lecm-contract_model.property.lecm-contract_currency.title=Currency of contract
+lecm-contract_model.property.lecm-contract_currency.description=Currency of contract
+lecm-contract_model.property.lecm-contract_totalSum.title=Total sum
+lecm-contract_model.property.lecm-contract_totalSum.description=The total amount of the contract
+lecm-contract_model.property.lecm-contract_startDate.title=Start date
+lecm-contract_model.property.lecm-contract_startDate.description=Start date of the contract
+lecm-contract_model.property.lecm-contract_endDate.title=End date
+lecm-contract_model.property.lecm-contract_endDate.description=End date of the contract
+lecm-contract_model.property.lecm-contract_unlimited.title=Unlimited
+lecm-contract_model.property.lecm-contract_unlimited.description=Unlimited
+lecm-contract_model.property.lecm-contract_registrator.title=Registrator
+lecm-contract_model.property.lecm-contract_registrator.description=Registrator of document
+lecm-contract_model.property.lecm-contract_locationRegistration.title=Location of registration
+lecm-contract_model.property.lecm-contract_locationRegistration.description=Location of registration
+lecm-contract_model.property.lecm-contract_locationContract.title=Location of contract
+lecm-contract_model.property.lecm-contract_locationContract.description=Location of contract
