Добавлен справочник "Валюты"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2045 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-dictionary/repo/src/main/config/messages/dictionary.properties
+++ b/lecm-dictionary/repo/src/main/config/messages/dictionary.properties
@@ -4,3 +4,7 @@ lecm-dic_dictionaryStructure.property.lecm-dic_description.title=Description
 lecm-dic_dictionaryStructure.property.lecm-dic_description.description=Description
 lecm-dic_dictionaryStructure.property.lecm-dic_active.description=Active
 lecm-dic_dictionaryStructure.property.lecm-dic_active.title=Active
+
+lecm-currency_model.type.lecm-currency_currency.title=\u0421urrency
+lecm-currency_model.property.lecm-currency_alphabetic-code.title=Alphabetic code
+lecm-currency_model.property.lecm-currency_digital-code.title=Digital code
